test/integration/good/tuples/tuple-nested-param.stan
parameters {
  (real, real) ps;
  (real, (real, matrix[10,10])) ps2;
}
