test/integration/bad/data_index/non_data_index8.stan
parameters {
  array[3] real y;

}
transformed parameters {
  positive_ordered[size(y)] z;
}
